--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.2.2",
     "@auth0/angular-jwt": "^5.2.0",
+    "@paypal/paypal-js": "^8.0.2",
     "bootstrap": "^5.3.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "ngx-pagination": "^6.0.3",
+    "platform.js": "^1.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^17.8.0",
     "rxjs": "~7.8.0",
