--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "^2.2.0",
     "@angular/animations": "^17.1.0",
     "@angular/cdk": "^17.2.1",
     "@angular/common": "^17.1.0",
@@ -26,7 +27,6 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ngx-pagination": "^6.0.3",
-
     "platform.js": "^1.0.0",
     "primeicons": "^6.0.1",
     "primeng": "^17.8.0",
