--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@paypal/paypal-js": "^8.0.2",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "ngx-pagination": "^6.0.3",
